--- a/products.html
+++ b/products.html
@@ -16,7 +16,7 @@
     <div class="main">
 
       <ul>
-        <li><a href="./ho.html">HOME</a></li>
+        <li><a href="./index.html">HOME</a></li>
         <li class="active"><a href="./products.html">PRODUCTS</a></li>
         <li><a href="./about.html">ABOUT US</a></li>
         <li><a href="./contact.html">CONTACT US</a></li>
