separated out header and footer

--- a/about.html
+++ b/about.html
@@ -13,19 +13,7 @@
 </head>
 
 <body>
-    <header>
-        <div class="main">
-
-            <ul>
-                <li><a href="./index.html">HOME</a></li>
-                <li><a href="./products.html">PRODUCTS</a></li>
-                <li class="active"><a href="./about.html">ABOUT US</a></li>
-                <li><a href="./contact.html">CONTACT US</a></li>
-
-            </ul>
-
-        </div>
-    </header>
+    <header></header>
 
     <div class="overlay"></div>
     <div class="content">
@@ -42,6 +30,8 @@
             <br>Coronavirus pandemic.We aspire for our customers’ wellbeing and hope to see them stay home and stay safe
         </p>
     </div>
+
+    <footer></footer>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
