--- a/index.html
+++ b/index.html
@@ -11,24 +11,11 @@
 </head>
 
 <body>
-  <header>
 
-    <div class="main">
+  <header></header>
 
-      <ul>
-        <li class="active"><a href="./index.html">HOME</a></li>
-        <li><a href="./products.html">PRODUCTS</a></li>
-        <li><a href="./about.html">ABOUT US</a></li>
-        <li><a href="./contact.html">CONTACT US</a></li>
+  <footer></footer>
 
-      </ul>
-
-    </div>
-    <div class="button">
-      <a href="./products.html" class="btn">OUR PRODUCTS</a>
-
-    </div>
-  </header>
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -38,6 +25,9 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+  <!-- our custom css -->
+  <script src="./scripts/loader.js"></script>
 </body>
 
 </html>
