--- a/products.html
+++ b/products.html
@@ -12,19 +12,7 @@
 </head>
 
 <body>
-  <header>
-    <div class="main">
-
-      <ul>
-        <li><a href="./index.html">HOME</a></li>
-        <li class="active"><a href="./products.html">PRODUCTS</a></li>
-        <li><a href="./about.html">ABOUT US</a></li>
-        <li><a href="./contact.html">CONTACT US</a></li>
-
-      </ul>
-
-    </div>
-  </header>
+  <header></header>
   <br>
   <br>
   <br>
@@ -58,6 +46,7 @@
     </div>
   </div>
 
+  <footer></footer>
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
