--- a/contact.html
+++ b/contact.html
@@ -13,18 +13,6 @@
 
 <body>
     <header>
-
-        <div class="main">
-
-            <ul>
-                <li><a href="./index.html">HOME</a></li>
-                <li><a href="./products.html">PRODUCTS</a></li>
-                <li><a href="./about.html">ABOUT US</a></li>
-                <li class="active"><a href="./contact.html">CONTACT US</a></li>
-
-            </ul>
-
-        </div>
     </header>
     <br>
     <br>
@@ -49,6 +37,8 @@
 
         </p>
     </div>
+
+    <footer></footer>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
