put home in a container

--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,6 @@
-<p>&copy; All rights reserved | Valluvassery builders | Disclaimer</p>
+<div class="bg-dark p-3">
+    <div class="container">
+        <span class="text-white">&copy; All rights reserved | Drop Ship Groceries | Disclaimer</span>
+
+    </div>
+</div>
