--- a/header.html
+++ b/header.html
@@ -1,15 +1,30 @@
-<div class="main">
+<div class="mdsain">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <!-- Brand -->
+        <a class="navbar-brand" href="#">Navbar</a>
 
-    <ul>
-        <li class="active"><a href="./index.html">HOME</a></li>
-        <li><a href="./products.html">PRODUCTS</a></li>
-        <li><a href="./about.html">ABOUT US</a></li>
-        <li><a href="./contact.html">CONTACT US</a></li>
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    </ul>
-
-</div>
-<div class="button">
-    <a href="./products.html" class="btn">OUR PRODUCTS</a>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse d-flex justify-content-end mr-5 sticky-top" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">index</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./products.html">products</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./about.html">about</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contact.html">contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
 </div>
