--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
   <header></header>
 
+  <div class="container">
+    <div class="button d-flex justify-content-center align-items-center" style="height: 700px;">
+      <a href="./products.html" class="btn">OUR PRODUCTS</a>
+    </div>
+  </div>
+
   <footer></footer>
 
 
