--- a/products.html
+++ b/products.html
@@ -13,39 +13,40 @@
 
 <body>
   <header></header>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
 
-  <div class="row">
-    <div class="column">
-      <img src="./img/meds2.jpg" width="500" height="500">
+  <!-- use margin instead of br -->
+
+  <div class="my-5"></div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img class="img-fluid" src="./img/meds2.jpg" width="500" height="500">
+      </div>
+      <div class="col">
+        <img class="img-fluid" src="./img/baked2.jpg" width="500" height="500">
+      </div>
+      <div class="col">
+        <img class="img-fluid" src="./img/flowers2.jpg" width="500" height="500">
+      </div>
     </div>
-    <div class="column">
-      <img src="./img/baked2.jpg" width="500" height="500">
-    </div>
-    <div class="column">
-      <img src="./img/flowers2.jpg" width="500" height="500">
+    <br>
+    <br>
+
+    <div class="row">
+      <div class="col">
+        <img class="img-fluid" src="./img/babyc2.jpg" width="500" height="500">
+      </div>
+      <div class="col">
+        <img class="img-fluid" src="./img/cosm2.jpg" width="500" height="500">
+      </div>
+      <div class="col">
+        <img class="img-fluid" src="./img/pet2.jpg" width="500" height="500">
+      </div>
     </div>
   </div>
-  <br>
-  <br>
 
-  <div class="row">
-    <div class="column">
-      <img src="./img/babyc2.jpg" width="500" height="500">
-    </div>
-    <div class="column">
-      <img src="./img/cosm2.jpg" width="500" height="500">
-    </div>
-    <div class="column">
-      <img src="./img/pet2.jpg" width="500" height="500">
-    </div>
-  </div>
-
+  <div class="m-5"></div>
   <footer></footer>
 
   <!-- jQuery library -->
@@ -57,6 +58,8 @@
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+  <!-- our custom css -->
+  <script src="./scripts/loader.js"></script>
 </body>
 
 </html>
