--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <!-- our custom css -->
+  <!-- our custom js -->
   <script src="./scripts/loader.js"></script>
 </body>
 
